force-app/main/default/objects/Survey__c/fields/Adults_in_House_Eat_Fruits_Vegetables__c.field-meta.xml
<CustomField>
    <fullName>Adults_in_House_Eat_Fruits_Vegetables__c</fullName>
    <label>Adults in House Eat Fruits Vegetables</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>How_Often</valueSetName>
    </valueSet>
</CustomField>