force-app/main/default/objects/Survey__c/fields/An_Ad_Tells_People_About_a_Product__c.field-meta.xml
<CustomField>
    <fullName>An_Ad_Tells_People_About_a_Product__c</fullName>
    <label>An Ad Tells People About a Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>True_or_False</valueSetName>
    </valueSet>
</CustomField>