force-app/main/default/objects/Survey__c/fields/Cheese_Pizza_Instead_of_Pepperoni__c.field-meta.xml
<CustomField>
    <fullName>Cheese_Pizza_Instead_of_Pepperoni__c</fullName>
    <label>Cheese Pizza Instead of Pepperoni</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Can_Cant</valueSetName>
    </valueSet>
</CustomField>