force-app/main/default/objects/Survey__c/fields/Eat_a_Piece_of_Fruit_Every_Day__c.field-meta.xml
<CustomField>
    <fullName>Eat_a_Piece_of_Fruit_Every_Day__c</fullName>
    <label>Eat a Piece of Fruit Every Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>How_Often</valueSetName>
    </valueSet>
</CustomField>