force-app/main/default/objects/Survey__c/fields/Example_of_Being_Emotionally_Healthy__c.field-meta.xml
<CustomField>
    <fullName>Example_of_Being_Emotionally_Healthy__c</fullName>
    <label>Example of Being Emotionally Healthy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a. Riding a bike</fullName>
            </value>
            <value>
                <fullName>b. Going for a walk</fullName>
            </value>
            <value>
                <fullName>c. Sharing feelings of being happy or sad</fullName>
            </value>
            <value>
                <fullName>d. Swimming in the pool</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>