force-app/main/default/objects/Survey__c/fields/Example_of_Being_Physically_Healthy__c.field-meta.xml
<CustomField>
    <fullName>Example_of_Being_Physically_Healthy__c</fullName>
    <label>Example of Being Physically Healthy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a. Laughing at a funny joke</fullName>
            </value>
            <value>
                <fullName>b. Playing basketball with friends</fullName>
            </value>
            <value>
                <fullName>c. Feeling proud of a homework project</fullName>
            </value>
            <value>
                <fullName>d. Sharing feelings of being happy or sad</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>