force-app/main/default/objects/Survey__c/fields/French_Fries_Come_From_an_Animal__c.field-meta.xml
<CustomField>
    <fullName>French_Fries_Come_From_an_Animal__c</fullName>
    <label>French Fries Come From an Animal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>True_or_False</valueSetName>
    </valueSet>
</CustomField>