force-app/main/default/objects/Survey__c/fields/Fresh_Fruit_Instead_of_Ice_Cream__c.field-meta.xml
<CustomField>
    <fullName>Fresh_Fruit_Instead_of_Ice_Cream__c</fullName>
    <label>Fresh Fruit Instead of Ice Cream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Can_Cant</valueSetName>
    </valueSet>
</CustomField>