force-app/main/default/objects/Survey__c/fields/Fruits_and_Vegetables_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Fruits_and_Vegetables_per_Day__c</fullName>
    <label>Fruits and Vegetables per Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a. 3</fullName>
            </value>
            <value>
                <fullName>b. 5</fullName>
            </value>
            <value>
                <fullName>c. 1</fullName>
            </value>
            <value>
                <fullName>d. 0</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>