force-app/main/default/objects/Survey__c/fields/Healthy_Ways_to_Handle_Stress__c.field-meta.xml
<CustomField>
    <fullName>Healthy_Ways_to_Handle_Stress__c</fullName>
    <label>Healthy Ways to Handle Stress</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a. Go for a walk outside</fullName>
            </value>
            <value>
                <fullName>b. Talk to a trusted friend or adult</fullName>
            </value>
            <value>
                <fullName>c. Yell at your parents or friends</fullName>
            </value>
            <value>
                <fullName>d. Write in a journal</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>