force-app/main/default/objects/Survey__c/fields/Minimum_Minutes_of_Physical_Activity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Minutes_of_Physical_Activity__c</fullName>
    <label>Minimum Minutes of Physical Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a. 15 minutes</fullName>
            </value>
            <value>
                <fullName>b. 30 minutes</fullName>
            </value>
            <value>
                <fullName>c. 45 minutes</fullName>
            </value>
            <value>
                <fullName>d. 60 minutes</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>