force-app/main/default/objects/Survey__c/fields/Most_Important_Drink__c.field-meta.xml
<CustomField>
    <fullName>Most_Important_Drink__c</fullName>
    <label>Most Important Drink</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a. Milk</fullName>
            </value>
            <value>
                <fullName>b. Gatorade</fullName>
            </value>
            <value>
                <fullName>c. Water</fullName>
            </value>
            <value>
                <fullName>d. Fruit juice</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>