force-app/main/default/objects/Survey__c/fields/Names_of_Food_Groups__c.field-meta.xml
<CustomField>
    <fullName>Names_of_Food_Groups__c</fullName>
    <label>Names of Food Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a. Dairy</fullName>
            </value>
            <value>
                <fullName>b. Protein</fullName>
            </value>
            <value>
                <fullName>c. Vegetables</fullName>
            </value>
            <value>
                <fullName>d. Fruits</fullName>
            </value>
            <value>
                <fullName>e. Oils/Fats</fullName>
            </value>
            <value>
                <fullName>f. Grains</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>