force-app/main/default/objects/Survey__c/fields/Number_of_Food_Groups__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Food_Groups__c</fullName>
    <label>Number of Food Groups</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a. 3</fullName>
            </value>
            <value>
                <fullName>b. 5</fullName>
            </value>
            <value>
                <fullName>c. 8</fullName>
            </value>
            <value>
                <fullName>d. 2</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>