force-app/main/default/objects/Survey__c/fields/Nuts_Instead_of_Chips__c.field-meta.xml
<CustomField>
    <fullName>Nuts_Instead_of_Chips__c</fullName>
    <label>Nuts Instead of Chips</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Can_Cant</valueSetName>
    </valueSet>
</CustomField>