force-app/main/default/objects/Survey__c/fields/Physically_Active_Every_Day__c.field-meta.xml
<CustomField>
    <fullName>Physically_Active_Every_Day__c</fullName>
    <label>Physically Active Every Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>How_Often</valueSetName>
    </valueSet>
</CustomField>