force-app/main/default/objects/Survey__c/fields/Play_Hard_During_Free_Time__c.field-meta.xml
<CustomField>
    <fullName>Play_Hard_During_Free_Time__c</fullName>
    <label>Play Hard During Free Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Can_Cant</valueSetName>
    </valueSet>
</CustomField>