force-app/main/default/objects/Survey__c/fields/Play_Hard_During_PE_Class__c.field-meta.xml
<CustomField>
    <fullName>Play_Hard_During_PE_Class__c</fullName>
    <label>Play Hard During PE Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Can_Cant</valueSetName>
    </valueSet>
</CustomField>