force-app/main/default/objects/Survey__c/fields/Processed_Foods_Found_in_Boxes__c.field-meta.xml
<CustomField>
    <fullName>Processed_Foods_Found_in_Boxes__c</fullName>
    <label>Processed Foods Found in Boxes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>True_or_False</valueSetName>
    </valueSet>
</CustomField>