force-app/main/default/objects/Survey__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Surveys (Submitted By)</relationshipLabel>
    <relationshipName>Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>