force-app/main/default/objects/Survey__c/fields/Type_2_Diabetes__c.field-meta.xml
<CustomField>
    <fullName>Type_2_Diabetes__c</fullName>
    <label>Type 2 Diabetes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a. People get only when they get older.</fullName>
            </value>
            <value>
                <fullName
        >b. That happens when the body has too much sugar and it can’t be processed correctly.</fullName>
                <label
        >b. That happens when the body has too much sugar and it can’t be processed correctly.</label>
            </value>
            <value>
                <fullName
        >c. That can be passed from one person to another person.</fullName>
                <label
        >c. That can be passed from one person to another person.</label>
            </value>
            <value>
                <fullName>d. That you usually cannot prevent.</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>