force-app/main/default/objects/Survey__c/fields/Water_Instead_of_Soda__c.field-meta.xml
<CustomField>
    <fullName>Water_Instead_of_Soda__c</fullName>
    <label>Water Instead of Soda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Can_Cant</valueSetName>
    </valueSet>
</CustomField>