force-app/main/default/objects/Survey__c/fields/Ways_to_Prevent_Type_2_Diabetes__c.field-meta.xml
<CustomField>
    <fullName>Ways_to_Prevent_Type_2_Diabetes__c</fullName>
    <label>Ways to Prevent Type 2 Diabetes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a. Eating healthy food</fullName>
            </value>
            <value>
                <fullName>b. Being active and exercising</fullName>
            </value>
            <value>
                <fullName>c. Staying a healthy weight</fullName>
            </value>
            <value>
                <fullName>d. All of the above</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>